<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="message"
            type="com.example.sendmessagebinding.data.Message" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.SendMessageActivity">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/etUserMarginTop"
            android:autofillHints=""
            android:hint="@string/etUserHint"
            android:inputType="text"
            android:minHeight="@dimen/etUserMinHeight"
            android:text="@{message.user.name}"
            android:textColorHint="@color/etUserColorHint" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/etMessageMarginTop"
            android:autofillHints=""
            android:hint="@string/etMessageHint"
            android:inputType="text"
            android:text="@={message.content}"
            android:minHeight="@dimen/etMessageMinHeight"
            android:textColorHint="@color/etMessageColorHint" />

        <Button
            android:id="@+id/btSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/btSendMarginTop"
            android:autofillHints=""
            android:onClick="sendMessage"
            android:text="@string/btSendText" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/icon_icons" />
    </LinearLayout>
</layout>